// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MultiSelect > matches default variant 1`] = `
<DocumentFragment>
  <template
    data-react-aria-hidden="true"
  />
  <div
    class="sc-hUAZgl itcLkM aje-multiselect sc-flQbIK gKNZcY aje-multiselect aje-multiselect--default"
  >
    <label
      class="sc-dVBluf eSKkgA"
      for="react-aria-:r2:"
      id="react-aria-:r3:"
    >
      label
    </label>
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="react-aria-:r7: react-aria-:r3:"
      class="sc-cMqPwU fLpmHx aje-btn aje-btn--dropdown is-medium"
      id="react-aria-:r2:"
      tabindex="0"
      type="button"
    >
      Select an option
      <i
        aria-hidden="true"
        class="sc-jBIHhB dShSRo aje-icon material-icons is-medium"
        style="margin-left: auto;"
      >
        arrow_drop_down
      </i>
    </button>
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > matches floating variant 1`] = `
<DocumentFragment>
  <template
    data-react-aria-hidden="true"
  />
  <div
    class="sc-hUAZgl itcLkM aje-multiselect sc-flQbIK gKNZcY aje-multiselect aje-multiselect--floating aje-multiselect--floating"
  >
    <div
      class="sc-gpHbIA eEUGqc"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="react-aria-:rf: react-aria-:rb:"
        class="sc-cMqPwU fLpmHx aje-btn aje-btn--dropdown is-medium"
        data-float="true"
        id="react-aria-:ra:"
        tabindex="0"
        type="button"
      >
        <i
          aria-hidden="true"
          class="sc-jBIHhB dShSRo aje-icon material-icons is-medium"
          style="margin-left: auto;"
        >
          arrow_drop_down
        </i>
      </button>
      <label
        class="sc-dVBluf eSKkgA"
        for="react-aria-:ra:"
        id="react-aria-:rb:"
      >
        label
      </label>
    </div>
  </div>
</DocumentFragment>
`;
